crates/test-files/fixtures/compile_errors/const_expr.fe
contract Foo:
    fn not_a_constant():
        let array: Array<i32, { (1, 2) }>
        
    fn zero_division():
        let array: Array<i32, { 1 / (3 - 3) }>